--- a/context/brand-context/springer/scss/10-settings/typography.scss
+++ b/context/brand-context/springer/scss/10-settings/typography.scss
@@ -5,20 +5,19 @@ $font-size-xs: 14px;
 $font-size-sm: 16px;
 $font-size-md: 18px;
 $font-size-lg: 24px;
-$font-size-xl: 26px;
-$font-size-xxl: 28px;
+$font-size-xl: 28px;
+$font-size-xxl: 32px;
+
+$font-size-h1: 3.2rem;
+$font-size-h2: 2.8rem;
+$font-size-h3: 2.4rem;
+$font-size-h4: 1.8rem;
 
 $font-size-furniture: $font-size-sm;
 $font-size-interface: $font-size-sm;
 
 $font-weight-normal: 400;
 $font-weight-bold: 700;
-
-$font-weight: (
-	// sass-lint:disable-block indentation
-	normal: 400,
-	bold: 700,
-);
 
 $line-height-base: 1.61803398875; // golden ratio
 $line-height-tight: 1.4;
