--- a/context/brand-context/default/scss/abstracts.scss
+++ b/context/brand-context/default/scss/abstracts.scss
@@ -5,6 +5,7 @@
  */
 
 @import '10-settings/breakpoints';
+@import '10-settings/buttons';
 @import '10-settings/colors/default';
 @import '10-settings/colors/shared';
 @import '10-settings/spacing'; // needs to appear before container
