--- a/context/brand-context/nature/scss/abstracts.scss
+++ b/context/brand-context/nature/scss/abstracts.scss
@@ -4,6 +4,7 @@
  * These files don’t output any CSS when compiled
  */
 
+@import '10-settings/buttons';
 @import '10-settings/colors/default';
 @import '10-settings/keyframes';
 @import '10-settings/style';
