--- a/context/brand-context/default/scss/10-settings/buttons.scss
+++ b/context/brand-context/default/scss/10-settings/buttons.scss
@@ -4,6 +4,10 @@
  *
  */
 
+// Function dependencies
+@import '../20-functions/colors';
+@import '../20-functions/spacing';
+
 $button--border-width-style: 1px solid;
 $button--line-height: 1.3;
 $button--font-family: sans-serif;
