--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -4,9 +4,9 @@
  * These files don’t output any CSS when compiled
  */
 
-@import '10-settings/buttons';
 @import '10-settings/colors/default';
 @import '10-settings/typography';
+@import '10-settings/buttons'; // needs to appear after colors & typography
 
 @import '20-functions/em';
 @import '20-functions/strip-unit';
