--- a/context/brand-context/default/scss/60-utilities/style.scss
+++ b/context/brand-context/default/scss/60-utilities/style.scss
@@ -2,6 +2,8 @@
 	@include u-shadow;
 }
 
+// <button> element reset
+// Does not reset the branded buttons provided in context
 .u-button-reset {
 	@include u-button-reset;
 }
