use latest brand-context with buttons, and update

--- a/toolkits/springer/packages/springer-pagination/scss/50-components/pagination.scss
+++ b/toolkits/springer/packages/springer-pagination/scss/50-components/pagination.scss
@@ -21,12 +21,13 @@
 }
 
 .c-pagination__link {
-	@include button($button--default);
+	@include button-default;
 	min-width: $pagination--item-width;
 	text-align: center;
 }
 
 .c-pagination__link--disabled {
+	@include button-default;
 	@include button-disabled;
 }
 
