rename modifiers to use size
- set min-height of leaderboard to prevent page reflow. also added for mpu since that has a light background

--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -1,12 +1,12 @@
 $ad--font-family: $font-family-sans;
 $ad--font-size: 1.4rem;
-$ad--leaderboard-bg-color: #ccc;
-$ad--leaderboard-padding: spacing(8);
-$ad--mpu-background-color: #ccc;
-$ad--mpu-margin-top: spacing(24);
-$ad--mpu-padding-top: spacing(8);
-$ad--mpu-padding-bottom: spacing(24);
-$ad--mpu-label-margin-bottom: spacing(8);
 $ad--label-margin-bottom: spacing(4);
 $ad--label-color: #333;
 $ad--label-line-height: 1.5;
+$ad--leaderboard-bg-color: #ccc;
+$ad--leaderboard-padding: spacing(8);
+$ad--leaderboard-height: 90px;
+$ad--leaderboard-ad-inner-min-height: calc(#{$ad--label-line-height}em + #{$ad--label-margin-bottom} + #{$ad--leaderboard-height});
+$ad--mpu-background-color: #f2f2f2;
+$ad--mpu-height: 250px;
+$ad--mpu-ad-inner-min-height: calc(#{$ad--label-line-height}em + #{$ad--label-margin-bottom} + #{$ad--mpu-height});
