--- a/context/brand-context/springernature/scss/abstracts.scss
+++ b/context/brand-context/springernature/scss/abstracts.scss
@@ -7,6 +7,7 @@
 @import '10-settings/breakpoints';
 @import '10-settings/colors/default';
 @import '10-settings/typography';
+@import '10-settings/buttons'; // needs to appear after colors & typography
 
 // 30-mixins
 @import '30-mixins/typography';
