add more SN specific styles, remove default

--- a/context/brand-context/default/scss/10-settings/buttons.scss
+++ b/context/brand-context/default/scss/10-settings/buttons.scss
@@ -19,6 +19,8 @@ $button--padding: spacing(8);
 $button--padding-large: spacing(16);
 $button--justify-content: center;
 $button--transition: 0.25s ease, color 0.25s ease, border-color 0.25s ease;
+$button--border-radius: null;
+$button--letter-spacing: null;
 
 // Button Themes
 // Variables to set themes styles
