--- a/context/brand-context/default/scss/30-mixins/buttons.scss
+++ b/context/brand-context/default/scss/30-mixins/buttons.scss
@@ -79,6 +79,8 @@
 	justify-content: $button--justify-content;
 	padding: $button--padding;
 	transition: $button--transition;
+	border-radius: $button--border-radius;
+	letter-spacing: $button--letter-spacing;
 }
 
 // Add base button styles
