--- a/toolkits/global/packages/global-author-list/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-author-list/scss/10-settings/default.scss
@@ -1,3 +1,9 @@
+/**
+ * @springernature/global-author-list
+ * Default skin settings
+ *
+ */
+
 // base
 $global-author-list--font-size: 1.6rem;
 $global-author-list--color: black;
