--- a/toolkits/global/packages/global-forms/scss/30-mixins/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/30-mixins/_forms.scss
@@ -1,9 +1,11 @@
 /**
  * @springernature/global-forms
- * form mixin
+ * form mixins
  *
  */
-@mixin global-form-input (
+
+// Input box
+@mixin form-input (
 	$padding: $global-form--padding,
 	$border: $global-form--border-color,
 	$background: $global-form--background-color,
