--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -1,3 +1,9 @@
+/**
+ * @springernature/global-ad
+ * Default skin settings
+ *
+ */
+
 $ad--font-family: $font-family-sans;
 $ad--font-size: 1.4rem;
 $ad--label-margin-bottom: spacing(4);
