move font styles to .c-ad__label

--- a/toolkits/global/packages/global-ad/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-ad/scss/10-settings/default.scss
@@ -6,6 +6,7 @@
 
 $ad--font-family: $font-family-sans;
 $ad--font-size: 1.4rem;
+$ad--font-weight: normal;
 $ad--label-margin-bottom: spacing(4);
 $ad--label-color: #333;
 $ad--label-line-height: 1.5;
