Uses variable to control background color of springer header

--- a/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
@@ -3,7 +3,7 @@
 }
 
 .c-header {
-	background-color: #fff;
+	background-color: $header--background-color;
 	padding: $header--padding-y $header--padding-x;
 	border-bottom: 4px solid color('corporate');
 }
