--- a/toolkits/springer/packages/springer-header/scss/10-settings/_header.scss
+++ b/toolkits/springer/packages/springer-header/scss/10-settings/_header.scss
@@ -1,4 +1,4 @@
-$header--background: greyscale(90) linear-gradient($page-base, greyscale(90));
+$header--background-color: #fff;
 $header--padding-y: spacing(16);
 $header--padding-x: 0;
 $header--border-color: greyscale(80);
