Tweaks springer header background colour and bottom border colour (#285)
* Tweaks springer header background colour and bottom border colour

* Uses variable to control background color of springer header

--- a/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
+++ b/toolkits/springer/packages/springer-header/scss/50-components/_header.scss
@@ -3,9 +3,9 @@
 }
 
 .c-header {
-	background: $header--background;
+	background-color: $header--background-color;
 	padding: $header--padding-y $header--padding-x;
-	border-bottom: 1px solid $header--border-color;
+	border-bottom: 4px solid color('corporate');
 }
 
 .c-header__container {
