remove missing mixins

--- a/toolkits/global/packages/global-breadcrumb/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumb/scss/10-settings/default.scss
@@ -1,5 +1,5 @@
 $breadcrumb-font-family: $font-family-sans;
-$breadcrumb-font-size-sm: $font-size-sm;
+$breadcrumb-font-size: 16px;
 $breadcrumb-color: black;
 $breadcrumb-link-color: greyscale(80);
 $breadcrumb-bottom-spacing: spacing(16);
