--- a/toolkits/global/packages/global-breadcrumb/scss/50-components/breadcrumb.scss
+++ b/toolkits/global/packages/global-breadcrumb/scss/50-components/breadcrumb.scss
@@ -1,6 +1,6 @@
 .c-breadcrumb {
 	@include u-list-inline;
-	@include font-size($breadcrumb-font-size-sm);
+	font-size: $breadcrumb-font-size;
 	font-family: $breadcrumb-font-family;
 	color: $breadcrumb-color;
 }
