use fix name in files and css classes

--- a/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
@@ -1,6 +1,6 @@
-$breadcrumb-font-family: $font-family-sans;
-$breadcrumb-font-size: 16px;
-$breadcrumb-color: black;
-$breadcrumb-link-color: greyscale(80);
-$breadcrumb-bottom-spacing: spacing(16);
-$breadcrumb-chevron-spacing: spacing(4);
+$breadcrumbs-font-family: $font-family-sans;
+$breadcrumbs-font-size: 16px;
+$breadcrumbs-color: black;
+$breadcrumbs-link-color: greyscale(80);
+$breadcrumbs-bottom-spacing: spacing(16);
+$breadcrumbs-chevron-spacing: spacing(4);
