--- a/toolkits/global/packages/global-breadcrumbs/scss/50-components/breadcrumbs.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/50-components/breadcrumbs.scss
@@ -7,6 +7,13 @@
 
 .c-breadcrumbs__link {
 	color: $breadcrumbs-link-color;
+
+	&.visited,
+	&:visited,
+	&.hover,
+	&:hover {
+		color: $breadcrumbs-link-color;
+	}
 }
 
 .c-breadcrumbs__chevron {
