--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -5,6 +5,7 @@
  */
 
 @import '10-settings/colors/default';
+@import '10-settings/rfs';
 @import '10-settings/typography';
 @import '10-settings/buttons'; // needs to appear after colors & typography
 
