--- a/context/brand-context/default/scss/30-mixins/rfs.scss
+++ b/context/brand-context/default/scss/30-mixins/rfs.scss
@@ -1,47 +1,20 @@
 /**
- * Responsive Font Sizes v9.0.3
+ * Responsive Font Sizes v8.0.4
  * https://github.com/twbs/rfs
  * https://github.com/twbs/rfs/blob/main/LICENSE
  */
 
 // Mixins
 // Adapted from:
-// https://github.com/twbs/rfs/blob/v9.0.3/scss.scss
-
-// Internal mixin used to determine which media query needs to be used
-@mixin _rfs-media-query {
-  @if $rfs-two-dimensional {
-    @if $rfs-mode == max-media-query {
-      @media (#{$rfs-mq-property-width}: #{$rfs-mq-value}), (#{$rfs-mq-property-height}: #{$rfs-mq-value}) {
-        @content;
-      }
-    }
-    @else {
-      @media (#{$rfs-mq-property-width}: #{$rfs-mq-value}) and (#{$rfs-mq-property-height}: #{$rfs-mq-value}) {
-        @content;
-      }
-    }
-  }
-  @else {
-    @media (#{$rfs-mq-property-width}: #{$rfs-mq-value}) {
-      @content;
-    }
-  }
-}
+// https://github.com/twbs/rfs/blob/v8.0.4/scss.scss
 
 // Internal mixin that adds disable classes to the selector if needed.
-@mixin _rfs-rule {
-  @if $rfs-class == disable and $rfs-mode == max-media-query {
-    // Adding an extra class increases specificity, which prevents the media query to override the property
+@mixin _rfs-disable-class {
+  @if $rfs-class == "disable" {
+    // Adding an extra class increases specificity, which prevents the media query to override the font size
     &,
-    .disable-rfs &,
-    &.disable-rfs {
-      @content;
-    }
-  }
-  @else if $rfs-class == enable and $rfs-mode == min-media-query {
-    .enable-rfs &,
-    &.enable-rfs {
+    .disable-responsive-font-size &,
+    &.disable-responsive-font-size {
       @content;
     }
   }
@@ -51,154 +24,103 @@
 }
 
 // Internal mixin that adds enable classes to the selector if needed.
-@mixin _rfs-media-query-rule {
-
-  @if $rfs-class == enable {
-    @if $rfs-mode == min-media-query {
+@mixin _rfs-enable-class {
+  @if $rfs-class == "enable" {
+    .enable-responsive-font-size &,
+    &.enable-responsive-font-size {
       @content;
-    }
-
-    @include _rfs-media-query {
-      .enable-rfs &,
-      &.enable-rfs {
-        @content;
-      }
     }
   }
   @else {
-    @if $rfs-class == disable and $rfs-mode == min-media-query {
-      .disable-rfs &,
-      &.disable-rfs {
-        @content;
-      }
+    @content;
+  }
+}
+
+// Internal mixin used to determine which media query needs to be used
+@mixin _rfs-media-query($mq-value) {
+  @if $rfs-two-dimensional {
+    @media (max-width: #{$mq-value}), (max-height: #{$mq-value}) {
+      @content;
     }
-    @include _rfs-media-query {
+  }
+  @else {
+    @media (max-width: #{$mq-value}) {
       @content;
     }
   }
 }
 
-// Helper function to get the formatted non-responsive value
-@function rfs-value($values) {
-  // Convert to list
-  $values: if(type-of($values) != list, ($values,), $values);
+// Responsive font size mixin
+@mixin rfs($fs, $important: false) {
+  // Cache $fs unit
+  $fs-unit: if(type-of($fs) == "number", unit($fs), false);
 
-  $val: '';
+  // Add !important suffix if needed
+  $rfs-suffix: if($important, " !important", "");
 
-  // Loop over each value and calculate value
-  @each $value in $values {
-    @if $value == 0 {
-      $val: $val + ' 0';
-    }
-    @else {
-      // Cache $value unit
-      $unit: if(type-of($value) == "number", unit($value), false);
-
-      @if $unit == px {
-        // Convert to rem if needed
-        $val: $val + ' ' + if($rfs-unit == rem, #{$value / ($value * 0 + $rfs-rem-value)}rem, $value);
-      }
-      @else if $unit == rem {
-        // Convert to px if needed
-        $val: $val + ' ' + if($rfs-unit == px, #{$value / ($value * 0 + 1) * $rfs-rem-value}px, $value);
-      }
-      @else {
-        // If $value isn't a number (like inherit) or $value has a unit (not px or rem, like 1.5em) or $ is 0, just print the value
-        $val: $val + ' ' + $value;
-      }
-    }
+  // If $fs isn't a number (like inherit) or $fs has a unit (not px or rem, like 1.5em) or $ is 0, just print the value
+  @if not $fs-unit or $fs-unit != "" and $fs-unit != "px" and $fs-unit != "rem" or $fs == 0 {
+    font-size: #{$fs}#{$rfs-suffix};
   }
-
-  // Remove first space
-  @return unquote(str-slice($val, 2));
-}
-
-// Helper function to get the responsive value calculated by RFS
-@function rfs-fluid-value($values) {
-  // Convert to list
-  $values: if(type-of($values) != list, ($values,), $values);
-
-  $val: '';
-
-  // Loop over each value and calculate value
-  @each $value in $values {
-    @if $value == 0 {
-      $val: $val + ' 0';
+  @else {
+    // Remove unit from $fs for calculations
+    @if $fs-unit == "px" {
+      $fs: $fs / ($fs * 0 + 1);
+    }
+    @else if $fs-unit == "rem" {
+      $fs: $fs / ($fs * 0 + 1 / $rfs-rem-value);
     }
 
-    @else {
-      // Cache $value unit
-      $unit: if(type-of($value) == "number", unit($value), false);
+    // Set default font size
+    $rfs-static: if($rfs-font-size-unit == rem, #{$fs / $rfs-rem-value}rem, #{$fs}px);
 
-      // If $value isn't a number (like inherit) or $value has a unit (not px or rem, like 1.5em) or $ is 0, just print the value
-      @if not $unit or $unit != px and $unit != rem {
-        $val: $val + ' ' + $value;
-      }
-
-      @else {
-        // Remove unit from $value for calculations
-        $value: $value / ($value * 0 + if($unit == px, 1, 1 / $rfs-rem-value));
-
-        // Only add the media query if the value is greater than the minimum value
-        @if abs($value) <= $rfs-base-value or not $enable-rfs {
-          $val: $val + ' ' +  if($rfs-unit == rem, #{$value / $rfs-rem-value}rem, #{$value}px);
-        }
-        @else {
-          // Calculate the minimum value
-          $value-min: $rfs-base-value + (abs($value) - $rfs-base-value) / $rfs-factor;
-
-          // Calculate difference between $value and the minimum value
-          $value-diff: abs($value) - $value-min;
-
-          // Base value formatting
-          $min-width: if($rfs-unit == rem, #{$value-min / $rfs-rem-value}rem, #{$value-min}px);
-
-          // Use negative value if needed
-          $min-width: if($value < 0, -$min-width, $min-width);
-
-          // Use `vmin` if two-dimensional is enabled
-          $variable-unit: if($rfs-two-dimensional, vmin, vw);
-
-          // Calculate the variable width between 0 and $rfs-breakpoint
-          $variable-width: #{$value-diff * 100 / $rfs-breakpoint}#{$variable-unit};
-
-          // Return the calculated value
-          $val: $val + ' calc(' + $min-width + if($value < 0, ' - ', ' + ') + $variable-width + ')';
-        }
-      }
-    }
-  }
-
-  // Remove first space
-  @return unquote(str-slice($val, 2));
-}
-
-// RFS mixin
-@mixin rfs($values, $property: font-size) {
-  @if $values != null {
-    $val: rfs-value($values);
-    $fluidVal: rfs-fluid-value($values);
-
-    // Do not print the media query if responsive & non-responsive values are the same
-    @if $val == $fluidVal {
-      #{$property}: $val;
+    // Only add the media query if the font size is bigger than the minimum font size
+    @if $fs <= $rfs-base-font-size or not $enable-responsive-font-sizes {
+      font-size: #{$rfs-static}#{$rfs-suffix};
     }
     @else {
-      @include _rfs-rule {
-        #{$property}: if($rfs-mode == max-media-query, $val, $fluidVal);
+      // Calculate the minimum font size for $fs
+      $fs-min: $rfs-base-font-size + ($fs - $rfs-base-font-size) / $rfs-factor;
+
+      // Calculate difference between $fs and the minimum font size
+      $fs-diff: $fs - $fs-min;
+
+      // Base font-size formatting
+      $min-width: if($rfs-font-size-unit == rem, #{$fs-min / $rfs-rem-value}rem, #{$fs-min}px);
+
+      // Use `vmin` if two-dimensional is enabled
+      $variable-unit: if($rfs-two-dimensional, vmin, vw);
+
+      // Calculate the variable width between 0 and $rfs-breakpoint
+      $variable-width: #{$fs-diff * 100 / $rfs-breakpoint}#{$variable-unit};
+
+      // Set the calculated font-size
+      $rfs-fluid: calc(#{$min-width} + #{$variable-width}) #{$rfs-suffix};
+
+      // Breakpoint formatting
+      $mq-value: if($rfs-breakpoint-unit == px, #{$rfs-breakpoint}px, #{$rfs-breakpoint / $rfs-rem-value}#{$rfs-breakpoint-unit});
+
+      @include _rfs-disable-class {
+        font-size: #{$rfs-static}#{$rfs-suffix};
+      }
+
+      @include _rfs-media-query($mq-value) {
+        @include _rfs-enable-class {
+          font-size: $rfs-fluid;
+        }
 
         // Include safari iframe resize fix if needed
         min-width: if($rfs-safari-iframe-resize-bug-fix, (0 * 1vw), null);
       }
-
-      @include _rfs-media-query-rule {
-        #{$property}: if($rfs-mode == max-media-query, $fluidVal, $val);
-      }
     }
   }
 }
 
-// Shorthand helper mixin
-@mixin font-size($value) {
-  @include rfs($value);
+// The font-size & responsive-font-size mixins use RFS to rescale the font size
+@mixin font-size($fs, $important: false) {
+  @include rfs($fs, $important);
+}
+
+@mixin responsive-font-size($fs, $important: false) {
+  @include rfs($fs, $important);
 }
