--- a/context/brand-context/nature/scss/10-settings/typography.scss
+++ b/context/brand-context/nature/scss/10-settings/typography.scss
@@ -4,8 +4,13 @@
  */
 
 $is-flagship-journal: false !default;
+$is-sans: false !default;
 $primary-font: if($is-flagship-journal, Harding, Lora);
-$font-family-serif: $primary-font, Palatino, Times, 'Times New Roman', serif;
+@if $is-sans == true {
+	$font-family-serif: $font-family-sans;
+} @else {
+	$font-family-serif: $primary-font, Palatino, serif;
+}
 
 $context--heading-font-weight: if($is-flagship-journal, bold, normal);
 $context--heading-line-height: 1.3;
