--- a/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
@@ -1,6 +1,6 @@
 $c-popup--padding-vertical: spacing(16);
 $c-popup--padding-left: spacing(24);
 $c-popup--padding-right: spacing(32);
-$c-popup--box-shadow: rgba(0,0,0,.1) 1px 1px 10px;
+$c-popup--box-shadow: rgba(0, 0, 0, .1) 1px 1px 10px;
 $c-popup--border-color: $foreground-light;
 $c-popup--background-color: #fff;
