Uses scss variables for min and max width

--- a/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
@@ -5,8 +5,8 @@
 	padding: $c-popup--padding-vertical $c-popup--padding-right $c-popup--padding-vertical $c-popup--padding-left;
 	border: 1px solid $c-popup--border-color;
 	box-shadow: $c-popup--box-shadow;
-	min-width: 300px;
-	max-width: 650px;
+	min-width: $c-popup--min-width;
+	max-width: $c-popup--max-width;
 	background-color: $c-popup--background-color;
 }
 
