--- a/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
@@ -4,3 +4,6 @@ $c-popup--padding-right: spacing(32);
 $c-popup--box-shadow: rgba(0, 0, 0, .1) 1px 1px 10px;
 $c-popup--border-color: $foreground-light;
 $c-popup--background-color: #fff;
+$c-popup--min-width: 300px;
+$c-popup--max-width: 650px;
+
