--- a/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
@@ -13,8 +13,8 @@
 .c-popup__close {
 	position: absolute;
 	display: block;
-	top: $c-popup--padding-vertical;
-	right: ($c-popup--padding-right / 2);
+	top: $c-popup--close-top;
+	right: $c-popup--close-right;
 	height: 12px;
 	background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20width%3D'12'%20height%3D'12'%20viewBox%3D'0%200%2012%2012'%3E%3Cpath%20fill%3D'%23666666'%20d%3D'M1.8%2012l-1.7-1.7%2010.2-10.3%201.7%201.7-10.2%2010.3zm10.1-1.7l-1.7%201.7-10.2-10.3%201.7-1.7%2010.2%2010.3z'%2F%3E%3C%2Fsvg%3E") no-repeat;
 	padding-right: 12px;
