--- a/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
@@ -1,6 +1,6 @@
 $breadcrumbs-font-family: $font-family-sans;
 $breadcrumbs-font-size: 16px;
 $breadcrumbs-color: black;
-$breadcrumbs-link-color: #666;
+$breadcrumbs-link-color: greyscale(40);
 $breadcrumbs-bottom-spacing: spacing(16);
 $breadcrumbs-chevron-spacing: spacing(4);
