move tests to correct locations

--- a/context/brand-context/springer/__tests__/sass/_springer.scss
+++ b/context/brand-context/springer/__tests__/sass/_springer.scss
@@ -1,5 +1,5 @@
-@import '../../default/scss/abstracts';
-@import '../../springer/scss/abstracts';
+@import '../../../default/scss/abstracts';
+@import '../../scss/abstracts';
 
 // font-size property with `px` unit
 .base {
