Adds border radius to global popup

--- a/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
@@ -3,6 +3,7 @@ $c-popup--close-top: spacing(16);
 $c-popup--close-right: spacing(16);
 $c-popup--box-shadow: rgba(0, 0, 0, .1) 1px 1px 10px;
 $c-popup--border-color: $foreground-light;
+$c-popup--border-radius: spacing(2);
 $c-popup--background-color: #fff;
 $c-popup--min-width: 300px;
 $c-popup--max-width: 650px;
