--- a/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
@@ -7,6 +7,7 @@
 	box-shadow: $c-popup--box-shadow;
 	min-width: $c-popup--min-width;
 	max-width: $c-popup--max-width;
+	border-radius: $c-popup--border-radius;
 	background-color: $c-popup--background-color;
 }
 
