--- a/context/brand-context/default/scss/60-utilities/buttons.scss
+++ b/context/brand-context/default/scss/60-utilities/buttons.scss
@@ -15,6 +15,10 @@
 	@include button-primary
 }
 
+.u-button--secondary {
+	@include button-secondary
+}
+
 .u-button--ghost {
 	@include button-ghost
 }
