--- a/context/brand-context/default/scss/30-mixins/buttons.scss
+++ b/context/brand-context/default/scss/30-mixins/buttons.scss
@@ -17,6 +17,12 @@
 	}
 }
 
+@mixin button-secondary {
+	@if variable-exists('button--secondary') {
+		@include button-theme($button--secondary);
+	}
+}
+
 @mixin button-ghost {
 	@if variable-exists('button--ghost') {
 		@include button-theme($button--ghost);
@@ -100,6 +106,7 @@
 	background-color: map-get($theme, 'backgroundColor');
 	background-image: map-get($theme, 'backgroundImage');
 	border: map-get($theme, 'border');
+	font-weight: map-get($theme, 'fontWeight');
 
 	&:visited {
 		color: map-get($theme, 'visitedColor');
