--- a/context/brand-context/default/scss/10-settings/typography.scss
+++ b/context/brand-context/default/scss/10-settings/typography.scss
@@ -4,6 +4,7 @@
  */
 
 $font-family-serif: serif;
+$font-family-serif-save-data: $font-family-serif;
 $font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 // Define your base size in EMs
