Add new variable to allow for save data

--- a/context/brand-context/nature/scss/10-settings/typography.scss
+++ b/context/brand-context/nature/scss/10-settings/typography.scss
@@ -10,6 +10,7 @@ $primary-font: if($is-flagship-journal, Harding, Lora);
 	$font-family-serif: $font-family-sans;
 } @else {
 	$font-family-serif: $primary-font, Palatino, serif;
+	$font-family-serif-save-data: Palatino, serif;
 }
 
 $context--heading-font-weight: if($is-flagship-journal, bold, normal);
