moved visually-hidden styling from util into popup styling

--- a/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
@@ -22,6 +22,10 @@
 	padding-right: 16px;
 }
 
+.c-popup__close-text {
+	@include u-visually-hidden;
+}
+
 .c-popup__arrow {
 	width: 30px;
 	height: 20px;
