--- a/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/50-components/_global-popup.scss
@@ -1,4 +1,4 @@
-.js {
+.js
 	.c-popup {
 		position: absolute;
 		font-family: $font-family-serif;
@@ -41,4 +41,4 @@
 		top: -20px;
 		background: url("data:image/gif;base64,R0lGODlhHgAUAPMJAOTl5+3t7+/w8t/g4ujp6vHy9Orr7eXm6P///wAAAAAAAAAAAAAAAAAAAAAAAAAAACH/C1hNUCBEYXRhWE1QAT8AIfkEBQAACQAsAAAAAB4AFAAABEcwyUmrvTjrzbv/YCiOZGkmx3FSh4Coa4vMcHkY81zU4gHkOQLvcwgAgYEhp3g8JonG5jHVYUqbA2XFem0+Mdxuk2oJi721CAA7") no-repeat 0 0;
 	}
-}
+
