--- a/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
@@ -1,8 +1,8 @@
 $c-popup--padding: spacing(16, 32, 16, 24);
 $c-popup--close-top: spacing(16);
 $c-popup--close-right: spacing(16);
-$c-popup--box-shadow: rgba(0, 0, 0, .1) 1px 1px 10px;
-$c-popup--border-color: $foreground-light;
+$c-popup--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
+$c-popup--border-color: color('action-dull', 0.3);
 $c-popup--border-radius: spacing(2);
 $c-popup--background-color: #fff;
 $c-popup--zindex: 100;
