A better fix for global popup border colours not being found (#329)
* A better fix for global popup border colours not being found

* Spaces after commas

--- a/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
+++ b/toolkits/global/packages/global-popup/scss/10-settings/_global-popup.scss
@@ -2,7 +2,7 @@ $c-popup--padding: spacing(16, 32, 16, 24);
 $c-popup--close-top: spacing(16);
 $c-popup--close-right: spacing(16);
 $c-popup--box-shadow: 0 0 5px 0 greyscale(50, 0.1);
-$c-popup--border-color: color(#97bfd8, 0.3);
+$c-popup--border-color: rgba(151, 191, 216, .3);
 $c-popup--border-radius: spacing(2);
 $c-popup--background-color: #fff;
 $c-popup--zindex: 100;
