--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
@@ -1,8 +1,9 @@
-$corporate-footer-font-family: $font-family-sans;
+$corporate-footer--font-family: $font-family-sans;
 $corporate-footer--background-color: #222;
 $corporate-footer--border: none;
 $corporate-footer--legal-padding-top: spacing(4);
 $corporate-footer--font-size: 1.3rem;
 $corporate-footer--text-color: #a2a2a2;
+$corporate-footer--margin-bottom: spacing(0);
 $corporate-footer--padding-top: spacing(16);
 $corporate-footer--padding-bottom: spacing(24);
