--- a/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
@@ -1,5 +1,5 @@
 .c-corporate-footer {
-	font-family: $corporate-footer-font-family;
+	font-family: $corporate-footer--font-family;
 	background-color: $corporate-footer--background-color;
 	border-top: $corporate-footer--border;
 	padding-top: $corporate-footer--padding-top;
@@ -9,7 +9,7 @@
 .c-corporate-footer__legal {
 	font-size: $corporate-footer--font-size;
 	color: $corporate-footer--text-color;
-	margin-bottom: 0;
+	margin-bottom: $corporate-footer--margin-bottom;
 	padding-top: $corporate-footer--legal-padding-top;
 }
 
