Use pixel value for nature font-size to workaround clash of mixin

--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/nature.scss
@@ -2,7 +2,7 @@ $corporate-footer--font-family: $font-family-sans;
 $corporate-footer--background-color: #222;
 $corporate-footer--border: none;
 $corporate-footer--legal-padding-top: spacing(4);
-$corporate-footer--font-size: 1.3rem;
+$corporate-footer--font-size: 13px;
 $corporate-footer--text-color: #a2a2a2;
 $corporate-footer--margin-bottom: spacing(0);
 $corporate-footer--padding-top: spacing(16);
