fix visually hidden on focus mixin

--- a/context/brand-context/springer/scss/30-mixins/hiding.scss
+++ b/context/brand-context/springer/scss/30-mixins/hiding.scss
@@ -39,12 +39,13 @@
 @mixin visually-hidden-focus {
 	&:active,
 	&:focus {
-		position: static;
+		position: static !important;
 		width: auto;
 		height: auto;
 		overflow: visible;
 		clip: auto;
 		white-space: normal;
 		clip-path: none;
+		margin: 0;
 	}
 }
