--- a/context/brand-context/springernature/scss/30-mixins/typography.scss
+++ b/context/brand-context/springernature/scss/30-mixins/typography.scss
@@ -4,7 +4,7 @@
 @mixin u-h1() {
 	font-weight: lighter;
 	font-size: $context--font-size-h1;
-	margin-bottom: global-spacing(40);
+	margin-bottom: spacing(48);
 	font-family: $font-family-serif;
   line-height: 1.2;
 }
@@ -12,7 +12,7 @@
 @mixin u-h2() {
 	font-weight: lighter;
 	font-size: $context--font-size-h2;
-	margin-bottom:  global-spacing(40);
+	margin-bottom:  spacing(32);
 	font-family: $font-family-serif;
   line-height: $context--heading-line-height;
 }
@@ -20,7 +20,7 @@
 @mixin u-h3() {
 	font-weight: bold;
 	font-size: $context--font-size-h3;
-	margin-bottom: global-spacing(30);
+	margin-bottom: spacing(24);
 	font-family: $font-family-serif;
   line-height: $context--heading-line-height;
 }
@@ -28,7 +28,7 @@
 @mixin u-h4() {
 	font-weight: normal;
 	font-size: $context--font-size-h3;
-	margin-bottom: global-spacing(30);
+	margin-bottom: spacing(16);
 	font-family: $font-family-serif;
   line-height: $context--heading-line-height;
 }
@@ -36,7 +36,7 @@
 @mixin u-h5() {
 	font-weight: bold;
 	font-size: $context--font-size-base;
-	margin-bottom: global-spacing(30);
+	margin-bottom: spacing(16);
 	font-family: $font-family-serif;
   line-height: 1.2;
 }
