Add c-header__site-navigation--last modifier to remove right padding

--- a/toolkits/nature/packages/nature-header/scss/10-settings/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/10-settings/header.scss
@@ -10,6 +10,7 @@ $header--layout-margin-left: spacing(16);
 $header--site-navigation-border-border-left: 1px solid greyscale(80);
 $header--site-navigation-margin-left: spacing(16);
 $header--site-navigation-padding: spacing(16);
+$header--site-navigation-last-padding: spacing(16) spacing(0) spacing(16) spacing(16);
 $header--site-navigation-text-align: right;
 $header--menu-line-height: 1.2;
 $header--menu-margin-left: 0 - spacing(8);
