--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -59,6 +59,10 @@
 	}
 }
 
+.c-header__site-navigation--last {
+	padding: $header--site-navigation-last-padding;
+}
+
 .c-header__container {
 	@include u-container();
 }
