Set margin-bottom to 0 on last element inside component

--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -5,6 +5,10 @@
 	display: flex;
 	width: 100%; // Caters for an ie bug with nested flex when child is a column
 	align-items: center;
+
+	*:last-child {
+		margin-bottom: spacing(0);
+	}
 }
 
 .c-status-message--boxed {
