update demo folder code, ESM imports

--- a/toolkits/global/packages/global-autocomplete/demo/index.hbs
+++ b/toolkits/global/packages/global-autocomplete/demo/index.hbs
@@ -1,11 +1,12 @@
+<h1>Example Autocomplete</h1>
+
+<p>{{data}}</p>
+
 <form action="#endpoint" method="post" id="searchForm" class="c-autocomplete-form">
 	<div>
 		<label for="searchFormTextInput" class="c-autocomplete-form__label">Search for an Animal:</label>
-		<input type="text"
-			autocomplete="off"
-			data-component-autocomplete
-			id="searchFormTextInput"
-			class="c-autocomplete">
+		<input type="text" autocomplete="off" data-component-autocomplete id="searchFormTextInput" class="c-autocomplete">
 	</div>
 	<button type="submit">Search</button>
 </form>
+
