--- a/toolkits/global/packages/global-autocomplete/demo/main.scss
+++ b/toolkits/global/packages/global-autocomplete/demo/main.scss
@@ -2,8 +2,8 @@
 
 // we must not add `node_modules/` to the SASS includePaths config,
 //   so use relative paths here. Paths are be relative to this file.
-@import '../node_modules/@springernature/brand-context/scss/core';
-@import '../node_modules/@springernature/brand-context/scss/enhanced';
+@import '../node_modules/@springernature/brand-context/default/scss/core.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
 
 // component SCSS
 @import '../scss/10-settings/default';
