--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -24,11 +24,14 @@
 .c-header__logo {
 	display: flex;
 	margin-right: $header--logo-margin-right;
-	max-height: $header--logo-max-height;
 	transform: translateZ(0); // promote new layer for mobile safari to avoid mangled logo during layout repaint
 
 	@include media-query('md') {
 		margin-right: spacing(0);
+	}
+
+	img {
+		max-height: $header--logo-max-height;
 	}
 }
 
