--- a/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
@@ -1,3 +1,10 @@
 $footer--background-color: greyscale(5);
 $footer--text-color: greyscale(70);
 $footer--font-size: 1.4rem;
+$footer--line-height: 1.4;
+$footer--header-border-bottom: 1px solid greyscale(20);
+$footer--heading-color: greyscale(90);
+    
+$footer--spacing-small: 8px;
+$footer--spacing-medium: 16px;
+$footer--spacing-large: 24px;
