--- a/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
@@ -1,8 +1,8 @@
 .c-footer {
 	background-color: $footer--background-color;
 	color: $footer--text-color;
-	line-height: 1.4;
-	padding: 24px 0;
+	line-height: $footer--line-height;
+	padding: $footer--spacing-large 0;
 	font-size: $footer--font-size;
 }
 
@@ -12,9 +12,9 @@
 }
 
 .c-footer__header {
-	margin-bottom: 24px;
-	padding-bottom: 24px;
-	border-bottom: 1px solid greyscale(20);
+	margin-bottom: $footer--spacing-large;
+	padding-bottom: $footer--spacing-large;
+	border-bottom: $footer--header-border-bottom;
 
 	@include media-query('md') {
 		display: flex;
@@ -23,7 +23,7 @@
 
 	> *:not(:last-child) {
 		@include media-query('md', 'max') {
-			margin-bottom: spacing(16);
+			margin-bottom: $footer--spacing-medium;
 		}
 	}
 }
@@ -42,7 +42,7 @@
 	@include u-list-inline();
 
 	.c-footer__item {
-		margin: 0 8px 0 0;
+		margin: 0 $footer--spacing-small 0 0;
 
 		&:last-child {
 			margin-right: 0;
@@ -57,7 +57,7 @@
 	@supports (display: grid) {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-		grid-column-gap: spacing(16);
+		grid-column-gap: $footer--spacing-medium;
 		grid-row-gap: spacing(32);
 	}
 }
@@ -65,8 +65,8 @@
 .c-footer__group {
 	flex: 1 1 50%;
 	max-width: 50%;
-	padding-right: spacing(16);
-	margin-bottom: spacing(16);
+	padding-right: $footer--spacing-medium;
+	margin-bottom: $footer--spacing-medium;
 
 	@include media-query('lg') {
 		flex-basis: 25%;
@@ -81,8 +81,8 @@
 }
 
 .c-footer__heading {
-	color: greyscale(90);
-	margin-bottom: spacing(16);
+	color: $footer--heading-color;
+	margin-bottom: $footer--spacing-medium;
 	font-weight: bold;
 	font-family: $font-family-sans;
 }
