--- a/toolkits/springernature/packages/springernature-user-details/scss/60-utilities/typography.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/60-utilities/typography.scss
@@ -1,5 +1,5 @@
 .u-font-12 {
-    font-size: 12px;
+	font-size: 12px;
 }
 
 .link-like {
@@ -9,5 +9,5 @@
 }
 
 .u-color-darker-grey {
-    color: #222;
+	color: $darker-grey;
 }
